# python-type-challenges

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/advanced/: buffer.py  callable-protocol.py  decorator.py  descriptor.py  forward.py  generator.py  generic-class.py  never.py  never2.py  overload-literal.py  overload.py  paramspec.py  protocol.py  recursive.py  type.py  typed-dict.py  typeguard.py  typeshed.py  variadic-generics.py
src/basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  return.py  tuple.py  typealias.py  union.py  variable.py
src/extreme/: concatenate.py  constructor.py  self-casting.py  variance.py
