[tool.poetry]
name = "python-type-challenges"
version = "0.1.0"
description = ""
authors = ["trifonovtema <artyom85@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pyright = "^1.1.390"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


